tests/ui-unstable/no-arguments.stderr
error: proc macro panicked
 --> $DIR/no-arguments.rs:6:5
  |
6 |     indoc!();
  |     ^^^^^^^^^
  |
  = help: message: argument must be a single string literal, but got 0 tokens
